deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: nginx-deployment
 labels:
   app: nginx
spec:
 replicas: 1
 selector:
   matchLabels:
     app: front-end
 template:
   metadata:
     labels:
       app: front-end
   spec:
     containers:
     - name: nginx
       image: nginx
       ports:
       - containerPort: 80
