ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: "foo.bar.com"
    http:
      paths:
      - pathType:  Prefix
        path: "/bar"
        backend:
          service:
            name: my-service
            port:
              number: 80
